--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,4 @@
 [MASTER]
-
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
 # run arbitrary code.
@@ -10,7 +9,7 @@ fail-under=10.0
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS,ui,tests
+ignore=CVS,ui,tests,Testaus
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
